<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Chat Cat</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="text_hint">Set your message</string>
    <string name="action_search">Search</string>
    <string name="action_delete">Delete</string>
    <string name="action_refresh">Refresh</string>
    <string name="app_url" translatable="false">http://10.2.6.30:8080</string>
</resources>